# termcolor_output

./: Cargo.toml
derive/: Cargo.toml  README.md
derive/src/: codegen.rs  formatter.rs  lib.rs  parse.rs  types.rs
macro/: Cargo.toml
macro/src/: lib.rs
macro/tests/: test.rs
macro/tests/fails/: no_args.stderr  not_a_string.stderr  not_a_writer.stderr  not_enough.rs  not_enough.stderr  too_many.rs  too_many.stderr  wrong_types_args.rs  wrong_types_args.stderr
macro/tests/passes/: control_only.rs  raw_only.rs  single.rs
src/: codegen.rs  lib.rs
tests/: test.rs
tests/fails/: no_args.rs  not_a_string.rs  not_a_writer.rs
