[package]
name = "termcolor_output"
version = "1.0.0-rc.2"
authors = ["Cerberuser"]
edition = "2018"
description = "Interface crate for styled output to termcolor through macro."
license = "MIT"

[dependencies]
termcolor_output_impl = "1.0.0-rc.2"
termcolor = "1.0"

[dev-dependencies]
trybuild = "1.0"
