[package]
name = "termcolor_output"
version = "1.1.0"
authors = ["Cerber Ursi <dev+rust@cerbe.ru>"]
edition = "2018"
description = "Interface crate for styled output to termcolor through macro."
license = "MIT"

[dependencies]
termcolor_output_impl = { version = "1.1.0", path = "../derive" }
termcolor = "1.0"

[dev-dependencies]
trybuild = "1.0"
